--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RDP DeepSeek-R1 Chat</title>
         <style>
             body { 
                 font-family: sans-serif; 
-                max-width: 600px; 
+                max-width: 600px;
                 margin: 2rem auto;
             }
             #chat-box{
@@ -33,7 +32,7 @@
     <body>
         <h1>RDP DeepSeek-R1 Chat</h1>
         <div id="chat-box"></div>
-        <textarea id="input-box" rows="3" placeholder="Ask Something..."></textarea>
+        <textarea id="input-box" rows="3" placeholder="Ask something..."></textarea>
         <button onclick="sendMessage()">Send</button>
         <button onclick="stopGeneration()" id="stop-btn" disabled>Reset</button>
         <script src="message.js"></script>
